...
                                   } else {
                                       print("User document updated with itinerary ID")
                                   }
                               }
                           }
                        }) {
                            Text("Save Itinerary")
                                .font(.headline)
                                .foregroundColor(.white)
                                .padding(EdgeInsets(top: 5, leading: 10, bottom: 5, trailing: 10))
                        }
                        .background(Color("orange"))
                        .cornerRadius(10)
...
                        }) {
                            Image(systemName: "arrow.down.to.line.alt")
                                .font(.title)
                                .foregroundColor(Color("orange"))
                        }
                        .padding(EdgeInsets(top: 0, leading: 10, bottom: 0, trailing: 10))
                        .accessibilityIdentifier("SaveAsPDF")
                    }

                    Picker("Day", selection: $selectedDayIndex) {
                        ForEach(0..<itinerary.plan.count, id: \.self) { dayIndex in
                            Text("Day \(dayIndex + 1)").tag(dayIndex)
                        }
                    }
                    .pickerStyle(SegmentedPickerStyle())
                    .padding()
                    .accessibilityIdentifier("DayPicker")


                    ScrollView {
                        Text("Total Time: \(formatTourDuration(selectedDayIndex < itinerary.tourDuration.count ? itinerary.tourDuration[selectedDayIndex] : 0.0))")
                            .font(.title)
                            .foregroundColor(Color(.systemBlue))
...
                                Text(itinerary.plan[selectedDayIndex][index].name)
                                    .font(.title3)
                                Spacer()
                            }
                            .padding(EdgeInsets(top: 5, leading: 0, bottom: 5, trailing: 0))
                        }
                    }.accessibilityIdentifier("Attractions")


                    Picker("Map Mode", selection: $selectedMapMode) {
                        Text("Car").tag(MapMode.car)
                        Text("Walk").tag(MapMode.walk)
                    }
                    .pickerStyle(SegmentedPickerStyle())
                    .padding()
                    .accessibilityIdentifier("MapPicker")


                    // Display Map
                    MapView(directions: $directions, selectedMapMode: selectedMapMode, attractions: itinerary.plan[selectedDayIndex], selectedDayIndex: selectedDayIndex)
                        .frame(height: 300)

...
                                .frame(width: 30, height: 30)
                            Image("google_maps_icon")
                                .resizable()
                                .scaledToFit()
                                .frame(width: 30, height: 30)

                            Text("Open in External Maps")
                                .font(.title2)
                                .foregroundColor(Color("orange"))
                            
                        }
                    }
                    .padding()
                    .cornerRadius(10)
                    .alert(isPresented: $showMapsAlert) {
                        Alert(
                            title: Text("Choose a Map App"),
                            message: Text("Open the location in Google Maps or Apple Maps?"),
                            primaryButton: .default(Text("Google Maps")) {
                                openGoogleMaps(forDay: selectedDayIndex)
                            },
                            secondaryButton: .default(Text("Apple Maps")) {
                                openAppleMaps()
                            })
                    }
                }
                .padding()
            }
...
