...
                        //email
                        InputView(text: $email,
                                  title: "Email",
                                  placeholder: "tommyT11@usc.edu"
                        )
                        .autocapitalization(.none)
                        .accessibility(identifier: "emailTextField")
                        //password
                        InputView(text: $password,
                                  title: "Password",
                                  placeholder: "Enter Password",
                                  isSecureField: true)
                        .autocapitalization(.none)
                        .accessibility(identifier: "passwordTextField")
                        
                    }
                    .padding(.horizontal)
                    .padding(.top, 20)
                    
                    //sign in button
...
                                navigateToProfile = true
                            }
                        }
                    }
                label: {
                    HStack {
                        Text("Sign In")
                            .fontWeight(.semibold)
                        Image(systemName: "arrow.right")
                    }
                    .font(.system(size: 20))
                    .foregroundColor(.white)
                    .frame(width: UIScreen.main.bounds.width - 32, height: 48)
...
