...
                List {
                    ForEach(0..<itineraries.count, id: \.self) { index in
                        NavigationLink(destination: MapPageView(itinerary: Itinerary(plan: plans[index], tourDuration: itineraries[index].tourDuration), disableSave: true)) {
                            Text(itineraries[index].itineraryName)
                        }
                    }
                }.accessibilityIdentifier("itineraryList")
                .onAppear {
                    self.loadItineraries { itineraryIDs in
                        // Use itineraryIDs as needed
                        print("Test - Itinerary IDs count: \(itineraryIDs?.count ?? 0)")
                    }
                }
...
